--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -103,32 +103,43 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "20481b6a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "labels = [\"working\", \"broken\", \"sizewarning\", \"nan\"]\n",
     "\n",
-    "latest_timestamps = np.sort(bridges[\"timestamp\"].unique())#[-30:] # Uncomment this to restrict the number of bridges\n",
+    "latest_timestamps = np.sort(bridges[\"timestamp\"].unique())[-30:]\n",
     "\n",
     "datamap = (bridges[bridges[\"timestamp\"].isin(latest_timestamps)]\n",
     "           .assign(date=lambda x: pd.to_datetime(x[\"timestamp\"], unit=\"s\"))\n",
     "           .set_index([\"Bridgename\", \"date\"])[\"status\"].unstack()\n",
     "           .fillna(\"nan\").replace({l:i for i, l in enumerate(labels)}))\n",
     "\n",
-    "\n",
     "fig, ax = plt.subplots(figsize=(10,80), facecolor=\"white\")\n",
     "sb.heatmap(datamap, cmap=list(np.array(sb.color_palette(\"pastel\"))[[2, 3, 8, 7]]),\n",
     "           linewidth=0.5, square=True, cbar=False)\n",
     "\n",
-    "plt.savefig(\"bridge_status_heatmap.png\", bbox_inches=\"tight\", dpi=200)"
+    "# plt.rc('ytick', labelsize=1, =0)    # fontsize of the tick labels\n",
+    "ax.set_xlabel(\"\")\n",
+    "ax.set_ylabel(\"\")\n",
+    "\n",
+    "ax.set_xticklabels([time.get_text().split(\"T\")[0] for time in ax.get_xticklabels()])\n",
+    "\n",
+    "ax.tick_params(axis='y', which='major', pad=0.5, labelsize=15, labelrotation=0)\n",
+    "ax.tick_params(axis='x', which='major', labelsize=15)\n",
+    "\n",
+    "\n",
+    "plt.savefig(\"bridge_status_heatmap.png\", bbox_inches=\"tight\", dpi=500)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data_analysis",
+   "display_name": "rss-bridge-tester",
    "language": "python",
-   "name": "data_analysis"
+   "name": "rss-bridge-tester"
   },
   "language_info": {
    "codemirror_mode": {
@@ -140,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
